46/ Massively increases bosses base HP.
47/ Deleted Legendary Wood Sword perk.
48/ Removed Killing Thrill and made it into a relic set.
49/ Deleted Plantera Essence and anything that related to it.
50/ Changed Pocket Portal from spawning friendly NPC to spawning boss Betsy.
51/ Removed Spirit Emblem and made it into a relic set.
52/ Adjusted Godborn dice, no longer a lost accessory and instead a legacy item
53/ Removed Spectre Quiver and made it into a relic set.
54/ Removed Starfell Stone and made it into a relic set.
55/ Changed Light Speed Round from accessory type to ammo type.
56/ Changed Fragment Round from accessory type to ammo type.
57/ Changed MagicMuzzle to Arcane Round and from accessory type to ammo type.
58/ Adjusted enemy stats scaling.
59/ Changed Magical Scroll from accessory type to potion type ( scroll type ).
60/ Changed Reactive Bombing and made it into a relic set.
61/ Changed StarCharm and made it into a relic set.
62/ Changed Guide to Ninja Master from lost accessory to normal accessory ( not obtainable as of now ).
63/ Changed Bouncy Relic from Lost accessory to artifact.
64/ Changed Mashed Of Copper from lost accessory to empowered accessories.
65/ Changed Elemental Shield from lost accessory to perk.
66/ Successfully removed any relation to lost accessory from the source code
67/ Disable Chaos mode from accessing.
68/ Deleted Life of Thorn mode.
69/ Deleted Synergy Fever mode.
70/ Deleted ForceBossDropRegardless, HardEnableFeature and AutoHarecore setting as those setting no longer needed.
71/ Removed Trinket of Swift Health and made it into a artifact.
72/ Deleted Trinket7 causes it is never implemented.
73/ Reduced sound volume when player spawn skeletron.
74/ Small fixes toward localization.
75/ Nerf Reactive Bombing damage from 90 to 30 damage.
76/ Slightly buff Synergy template in relic.
77/ Small code optimization.
78/ Removed Trinket of Perpetuation and made it into a artifact.